
	The `print` method for class "how" wasn't printing details of
	mirroring or constant settings for within-plot components.

	* numPerms: fixed a bug where `numPerms()` was ignoring Blocks when
	computing the number of possible permutations.

	* Within, Plots: as with `how()`, the matched call is now returned
	as part of the list object, allowing desirable `update()` behaviour.

Version 0.7-4

	* Deprecated functions: Completed the deprecation of `permCheck()`
	and `permControl()`. These functions will be made defunct following
	the release of version 0.8-0, with a view to complete removal from
	version 0.9-0 onwards.

Version 0.7-3

	* Tweak to 0.7-2 API changes: argument `blocks` no longer takes
	a list from helper function `Blocks()`. It is easier and simpler
	if this just takes a factor. In essence, `blocks` in synonymous
	with `strata` from `vegan::permuted.index` and the new change will
	allow for an easier transition.

	* get-methods: New extractor functions `getMirror()`, and
	`getConstant()` which retrieve the mirroring and constant elements
	of a permutation design.

	Also added `getRow()`, `getCol()` and `getDim()`, which extract
	the row and column dimensions of a grid permutation design, or
	both.

	In addition, new methods `getNperm()` and `getMaxperm()` return
	the number of permutations requested and the maximum nuber that
	should be allowed, respectively. New method `getComplete` extracts
	details of the complete enumeration features of permute.

	* numPerms: updated to work with the new API and now handles
	blocking. Exmaples now pass checks again.

	* allPerms: updated to the new API.

	* check: updated to the new API.

	* how: new function, a copy of `permControl()` and will eventually
	replace that function. Has a new `print` method.

	Begun process of *deprecating* `permControl()` and its `print`
	method.

	* permControl, how: the `strata.name` component of the returned
	object is no called `blocks.name`.
